# otus-arch

./: CMakeLists.txt  README.md
.github/workflows/: pipeline.yml
01-unit-tests-quadratic-equation/: README.md
01-unit-tests-quadratic-equation/src/: CMakeLists.txt
01-unit-tests-quadratic-equation/src/quad_equation/: CMakeLists.txt  quad_equation.cpp
01-unit-tests-quadratic-equation/tests/: CMakeLists.txt  quad_equation_test.cpp
